User Authentication (HttpClientModule) implementing Request Interceptor and Swagger end point documentation
